tests/baselines/reference/selfRef.errors.txt
==== tests/cases/compiler/selfRef.ts (2 errors) ====
    module M
    {
        export class Test
        {
          private name = "hello";
          public setName = function(value: string): void {
          (function () {
              name=value;
           ~~~~
!!! error TS2095: Could not find symbol 'name'.
          })();
          }
          public getName = function(): string {
              return name;
                     ~~~~
!!! error TS2095: Could not find symbol 'name'.
          }
        }
    }
    
    
    